Fix spacing make display weird

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #882551;
   color: #fff;
   font-family: "ABeeZee", "Roboto", sans-serif;
   font-size: 100%;
